--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,12 @@
-<style>
-	#bc-placeholder {
-		position: fixed;
-		margin: 0;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		padding-top: 200px;
-		font-size: 48px;
-		font-family: sans-serif;
-		background: #4DAAA7;
-		color: #fff;
-		text-align: center;
-	}
-</style>
-<div id="bc-placeholder">INSERT AWESOME FILES CHALLENGE SOLUTION HERE</div>
-<script src="/dist/app.js"></script>
+<!doctype html>
+<html lang="en">
+	<head>
+		<title>BC FE Onsite</title>
+		<link href="static/styles.css" rel="stylesheet">
+	</head>
+
+	<body>
+		<div id="bc-placeholder">Hello, world!</div>
+		<script src="/dist/app.js"></script>
+	</body>
+</html>
