--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
 	<body>
 		<div id="bc-placeholder">Hello, world!</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="/dist/app.js"></script>
 	</body>
 </html>
