--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,17 @@
 	</head>
 
 	<body>
-		<div id="bc-placeholder">Hello, world!</div>
+		<header>
+			<h1>Projects</h1>
+		</header>
+		<main>
+			<input id="projectName" type="text" placeholder="Project name">
+			<button id="projectCreate">
+				Create Project
+			</button>
+			<ul id="projectList">
+			</ul>
+		</main>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="/dist/app.js"></script>
 	</body>
