Feat: display root level files

--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,10 @@
 					<input type="submit" value="Upload Files">
 				</form>
 				<a id="backBtn" href="javascript:void(0)">Back</a>
+				<ul id="directory">
+				</ul>
 			</section>
 		</main>
-		<script id="projectFileViewDetail" type="text/javascript">
-
-		</script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="/dist/app.js"></script>
