Feat: create folder

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 			<!-- Project detail view (files) -->
 			<section id="projectFileView" class="project-file-view">
 				<h2 id="projectFileViewName"></h2>
+				<input id="folderName" type="text" placeholder="Folder name">
 				<button id="newFolderBtn">
 					New Folder
 				</button>
